--- a/lead_extractor/templates/lead_extractor/login.html
+++ b/lead_extractor/templates/lead_extractor/login.html
@@ -132,6 +132,11 @@
                         <label for="password" class="form-label">Senha</label>
                         <input type="password" class="form-control form-control-lg" id="password" required>
                     </div>
+                    <div class="text-end mb-3">
+                        <a href="{% url 'password_reset' %}" class="toggle-link" style="font-size: 0.875rem;">
+                            <i class="fas fa-key me-1"></i>Esqueci minha senha
+                        </a>
+                    </div>
                     <button type="submit" class="btn btn-primary btn-lg w-100">
                         <i class="fas fa-sign-in-alt me-2"></i>Entrar
                     </button>
