--- a/lead_extractor/templates/lead_extractor/login.html
+++ b/lead_extractor/templates/lead_extractor/login.html
@@ -144,8 +144,8 @@
                     </a>
                 </div>
                 <div class="text-center mt-2">
-                    <a href="{% url 'password_reset' %}" class="toggle-link" style="font-size: 0.875rem;">
-                        <i class="fas fa-key me-1"></i>Esqueci minha senha
+                    <a href="/password-reset/" class="toggle-link" style="font-size: 0.875rem;">
+                        Esqueci minha senha
                     </a>
                 </div>
             </div>
